# dispenser-core

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  default.nix  default.nix.bifwi  dispenser-core.cabal  dispenser-core.nix  package.yaml  shell.nix  stack.yaml
src/: Dispenser.hs
src/Dispenser/: Catchup.hs  Core.hs  Diffs.hs  Folds.hs  Functions.hs  Memory.hs  NullClient.hs  Prelude.hs  Projections.hs  ResourceTOrphans.hs  Sequencer.hs  Transport.hs  TransportExample.hs  Types.hs
src/Dispenser/Client/: Memory.hs  Null.hs
test/: CatchupSpec.hs  DiffsSpec.hs  DiffsTest.hs  FoldsSpec.hs  FoldsTest.hs  FunctionsSpec.hs  FunctionsTest.hs  MemorySpec.hs  MemoryTest.hs  ProjectionSpec.hs  TestHelpers.hs  TypesSpec.hs  TypesTest.hs
