name:                dispenser-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/superpowerscorp/dispenser-core#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          john@superpowerscorp.com
copyright:           2018 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Dispenser.Catchup
                     , Dispenser.Core
                     , Dispenser.Prelude
                     , Dispenser.Projections
                     , Dispenser.Types
  build-depends:       aeson
                     , base  >= 4.7 && < 5
                     , bytestring
                     , containers
                     , data-default
                     , focus-prelude
                     , foldl
                     , lens
                     , monad-control
                     , random
                     , stm
                     , streaming
                     , text
                     , time
                     , unordered-containers
  default-language:    Haskell2010

test-suite dispenser-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CatchupSpec
                     , ProjectionSpec
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , data-default
                     , dispenser-core
                     , focus-prelude
                     , foldl
                     , hspec
                     , lens
                     , monad-control
                     , QuickCheck
                     , random
                     , stm
                     , streaming
                     , text
                     , time
                     , unordered-containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/dispenser-core
