name:                dispenser-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/superpowerscorp/dispenser-core#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          john@superpowerscorp.com
copyright:           2018 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  exposed-modules:     Dispenser
                     , Dispenser.Catchup
                     , Dispenser.Client.Memory
                     , Dispenser.Client.Null
                     , Dispenser.Diffs
                     , Dispenser.Prelude
                     , Dispenser.Projections
                     , Dispenser.Types
                     -- in development
                     , Dispenser.Transport
                     , Dispenser.TransportExample
  build-depends:       aeson
                     , aeson-diff
                     , base  >= 4.7 && < 5
                     , bytestring
                     , containers
                     , data-default
                     , focus-prelude
                     , foldl
                     , lens
                     , monad-control
                     , random
                     , resourcet
                     , stm
                     , streaming
                     , text
                     , time
                     , unordered-containers
  default-language:    Haskell2010

test-suite dispenser-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CatchupSpec
                     , DiffsSpec
                     , MemorySpec
                     , ProjectionSpec
                     , TestHelpers
  build-depends:       QuickCheck
                     , aeson
                     , aeson-diff
                     , base
                     , bytestring
                     , containers
                     , data-default
                     , dispenser-core
                     , focus-prelude
                     , foldl
                     , hspec
                     , lens
                     , monad-control
                     , random
                     , resourcet
                     , stm
                     , streaming
                     , text
                     , time
                     , unordered-containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/dispenser-core
