name:                dispenser-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/superpowerscorp/dispenser-core#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          john@superpowerscorp.com
copyright:           2018 Superpowers Corp, 2019 Interos, Inc.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  exposed-modules:     Dispenser
                     , Dispenser.Client.Memory
                     , Dispenser.Client.Null
                     , Dispenser.Diffs
                     , Dispenser.Folds
                     , Dispenser.Functions
                     , Dispenser.Prelude
                     , Dispenser.Projections
                     , Dispenser.Types
                     -- in development
                     -- , Dispenser.Transport
                     -- , Dispenser.TransportExample
  build-depends:       QuickCheck
                     , aeson
                     , aeson-diff
                     , base  >= 4.7 && < 5
                     , bytestring
                     , containers
                     , data-default
                     , foldl
                     , lens
                     , monad-control
                     , protolude
                     , quickcheck-instances
                     , random
                     , resourcet
                     , stm
                     , streaming
                     , text
                     , time
                     , unordered-containers
                     , zero
  default-language:    Haskell2010

test-suite dispenser-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DiffsSpec
                     , FoldsSpec
                     , MemorySpec
                     , TestHelpers
                     , TypesSpec
  build-depends:       QuickCheck
                     , aeson
                     , aeson-diff
                     , base
                     , bytestring
                     , containers
                     , data-default
                     , dispenser-core
                     , foldl
                     , hspec
                     , lens
                     , monad-control
                     , protolude
                     , quickcheck-instances
                     , random
                     , resourcet
                     , stm
                     , streaming
                     , text
                     , time
                     , unordered-containers
                     , zero
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/superpowerscorp/dispenser-core
